[package]
name = "rust-features-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
foo = [ "derive-new" ]
bar = [ "boolinator" ]

[dependencies]
derive-new = { version = "0.5.9", default_features = false, optional = true }
boolinator = { version = "2.4.0", default_features = false, optional = true }
